--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -167,6 +167,25 @@ body {
   background: #c15858;
 }
 
+.main-wrapper .content a {
+  background: #7159c1;
+  text-decoration: none;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  border: 0;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.main-wrapper .content a:hover {
+  background: #634dac;
+}
+
 .main-wrapper .content p {
   font-size: 14px;
   color: #666;
