--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -4,19 +4,27 @@
   <div class="content">
     <strong>Olá
       {{user.name}}</strong>
-    <p>Inicie um agendamento escolhendo um profissional abaixo:</p>
 
-    <ul class="providers">
-      {% for provider in providers %}
-        <li class="provider">
-          <div>
-            <img src="/files/{{ provider.avatar }}" alt=""/>
-            <strong>{{provider.name}}</strong>
-          </div>
-          <a href="/app/appointments/new/{{ provider.id }}">+</a>
-        </li>
-      {% endfor %}
-    </ul>
+    {% if (user.provider === true) %}
+      <a class="schedule" href="/app/schedule">Meus agendamentos</a>
+
+    {% else %}
+
+      <p>Inicie um agendamento escolhendo um profissional abaixo:</p>
+
+      <ul class="providers">
+        {% for provider in providers %}
+          <li class="provider">
+            <div>
+              <img src="/files/{{ provider.avatar }}" alt=""/>
+              <strong>{{provider.name}}</strong>
+            </div>
+            <a href="/app/appointments/new/{{ provider.id }}">+</a>
+          </li>
+        {% endfor %}
+      </ul>
+
+    {% endif %}
 
     <a href="/app/logout" class="logout">Sair</a>
   </div>
